--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
@@ -40,14 +40,15 @@
                     </HBox>
                   </children>
                 </VBox>
-                <GridPane hgap="5.0" prefHeight="311.0" vgap="5.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="9.0">
+                <GridPane hgap="5.0" prefHeight="311.0" vgap="5.0" AnchorPane.bottomAnchor="38.5" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="7.5">
                   <children>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <TextField fx:id="nameMarcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addMarcador" onMouseClicked="#addMarcador" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                    <TableView fx:id="lstMarcadores" maxHeight="1.7976931348623157E308" maxWidth="227.0" prefHeight="163.0" prefWidth="227.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" onMouseClicked="#marcadorSelect">
+                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addMarcador" onMouseClicked="#addMarcador" text="Agregar" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                    <TableView fx:id="lstMarcadores" maxHeight="1.7976931348623157E308" maxWidth="374.0" onMouseClicked="#marcadorSelect" prefHeight="223.0" prefWidth="374.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                       <columns>
-                        <TableColumn maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="227.0" text="Marcador" fx:id="colMarcador" />
+                        <TableColumn maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="247.0" text="Marcador" fx:id="colMarcador" />
+                        <TableColumn prefWidth="120.0" text="Entrada/Salida" fx:id="colInOut" />
                       </columns>
                     </TableView>
                     <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
@@ -56,13 +57,17 @@
                       </children>
                     </HBox>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Archivo" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <TextField fx:id="nameFiler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="nameFiler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0" />
                     <HBox fx:id="paginatorMarcadores" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                    <RadioButton fx:id="rbIn" mnemonicParsing="false" text="Entrada" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <RadioButton fx:id="rbOut" mnemonicParsing="false" text="Salida" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="108.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="257.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="104.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="201.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="76.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="76.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="77.0" />
                   </columnConstraints>
                   <rowConstraints>
                     <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
@@ -83,12 +88,11 @@
                 <GridPane alignment="TOP_LEFT" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="5.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="10.0">
                   <children>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Servicio" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <ChoiceBox fx:id="lstServicios" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0" GridPane.rowSpan="1" />
-                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Campos Consulta" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+                    <ChoiceBox fx:id="lstServicios" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.rowSpan="1" />
+                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Campos Consulta" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Campo" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                     <ChoiceBox fx:id="lstCampos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addServicioCampo" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                    <TableView fx:id="lstServicioCampo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="3" onMouseClicked="#servicioCampo">
+                    <TableView fx:id="lstServicioCampo" onMouseClicked="#servicioCampo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="4">
                       <columns>
                         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="44.0" text="#">
                           <cellValueFactory>
@@ -105,31 +109,39 @@
                             <PropertyValueFactory property="campo" />
                           </cellValueFactory>
                         </TableColumn>
+                        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="80.0" text="Marcador">
+                          <cellValueFactory>
+                            <PropertyValueFactory property="marcador" />
+                          </cellValueFactory>
+                        </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                       <children>
                         <Button fx:id="btnDelServicio" contentDisplay="CENTER" mnemonicParsing="false" onAction="#delServicioCampo" text="Eliminar" />
                       </children>
                     </HBox>
-                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Columna" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                    <TextField fx:id="columna" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                    <HBox fx:id="paginatorServicios" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Columna" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                    <TextField fx:id="columna" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                    <HBox fx:id="paginatorServicios" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                    <ChoiceBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="lstMarcadorIn"/>
+                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addServicioCampo" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                   </children>
                   <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="61.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="189.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="96.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="59.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="54.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="106.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="260.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="78.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="99.0" />
                   </columnConstraints>
                   <rowConstraints>
-                    <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="191.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="240.0" minHeight="10.0" prefHeight="221.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                 </GridPane>
               </children>
@@ -149,7 +161,7 @@
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <ChoiceBox fx:id="marcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                     <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregar" text="Agregar" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                    <TableView fx:id="lstMarcadoresCampos" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2" onMouseClicked="#servicioMarcador">
+                    <TableView fx:id="lstMarcadoresCampos" onMouseClicked="#servicioMarcador" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2">
                       <columns>
                         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="236.0" text="Servicio">
                           <cellValueFactory>
