--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/genConfig.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/genConfig.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefWidth="554.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.config.GenConfigBean">
+<BorderPane fx:id="window" prefWidth="554.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.config.GenConfigBean">
   <bottom>
     <HBox alignment="CENTER" prefHeight="39.0" prefWidth="200.0">
       <children>
