--- a/pyt-contabilidad/pyt-app/src/main/resources/view/toggle/toggle.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/toggle/toggle.fxml
@@ -13,23 +13,25 @@
   <bottom>
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="-1.0">
       <children>
-        <GridPane fx:id="gpRowSelected" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+        <GridPane fx:id="gpRowSelected" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="420.0">
           <children>
             <Label fx:id="lblSelectedOption" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="\%fxml.lbl.name" GridPane.columnIndex="0" GridPane.rowIndex="0">
               <GridPane.margin>
                 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" fx:id="x1" />
               </GridPane.margin>
             </Label>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="%fxml.lbl.cancel" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="0" />
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#updateCacheSeleted" text="%fxml.lbl.clean" GridPane.columnIndex="1" GridPane.rowIndex="0">
+            <RadioButton fx:id="rfSelected" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#updateCacheSeleted" text="%fxml.lbl.update" GridPane.columnIndex="2" GridPane.rowIndex="0">
               <GridPane.margin>
                 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" fx:id="x1" />
               </GridPane.margin>
             </Button>
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="%fxml.lbl.cancel" GridPane.columnIndex="3" GridPane.rowIndex="0" />
           </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="146.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="73.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="18.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="136.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="81.0" />
           </columnConstraints>
           <rowConstraints>
@@ -46,7 +48,7 @@
           <columns>
             <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="180.0" text="%fxml.lbl.name" fx:id="tcName" />
             <TableColumn maxWidth="5000.0" minWidth="30.0" prefWidth="119.0" text="%fxml.lbl.state" fx:id="tcActived" />
-            <TableColumn maxWidth="5000.0" minWidth="30.0" prefWidth="119.0" text="%fxml.lbl.state" fx:id="tcLastUpdated" />
+            <TableColumn maxWidth="5000.0" minWidth="30.0" prefWidth="119.0" text="%fxml.lbl.last.update" fx:id="tcLastUpdated" />
           </columns>
           <rotationAxis>
             <Point3D />
