--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listDetalle.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/listDetalle.fxml
@@ -25,7 +25,7 @@
   <center>
     <VBox alignment="TOP_LEFT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_LEFT">
       <children>
-        <TableView fx:id="tabla" onMouseClicked="#seleccionar" prefHeight="288.0" prefWidth="533.0"/>
+        <TableView fx:id="tabla" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="288.0" prefWidth="533.0" />
         <HBox fx:id="paginador" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="455.0" />
         <HBox alignment="TOP_RIGHT" prefHeight="26.0" prefWidth="533.0">
           <children>
