--- a/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
@@ -15,19 +15,7 @@
 	prefWidth="604.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
 	fx:controller="org.pyt.app.beans.banco.BancoCRUBean">
 	<bottom>
-		<FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="34.0" prefWidth="578.0" BorderPane.alignment="CENTER">
-			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Guardar" />
-				<Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
-					<FlowPane.margin>
-						<Insets left="10.0" />
-					</FlowPane.margin>
-				</Button>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
+		<FlowPane alignment="CENTER" fx:id="sectionButtons" columnHalignment="CENTER" prefHeight="34.0" prefWidth="578.0" BorderPane.alignment="CENTER"/>
 	</bottom>
 	<center>
 		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
